--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,12 @@ dependencies:
     sdk: flutter
   json_annotation: ^4.8.1
   http: ^1.2.1
-  audioplayers: ^6.0.0
+  just_audio: ^0.9.36
+  audio_session: ^0.1.18
+  rxdart: ^0.27.7
+  quiver: ^3.2.1
+  marquee: ^2.2.3
+
 
   
 
