--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 flutter:
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter/Inter-Regular.ttf
+        - asset: assets/fonts/Inter/Inter-Bold.ttf
   uses-material-design: true
   assets:
     - assets/images/jazzcafe.jpeg
