--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "flourish_web",
             "request": "launch",
             "type": "dart",
             "args": [
-                "--web-browser-flag=--disable-web-security"
+                "--web-browser-flag=--disable-web-security",
+                
+                "--web-port",
+                "8080"
+       
             ]
         },
         {
