--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,34 @@ dependencies:
   marquee: ^2.2.3
   cached_network_image: ^3.3.1
   url_launcher: ^6.3.0
+  flutter_audio_waveforms: ^1.2.1+8
+  file_picker: ^8.0.6
+  card_swiper: ^3.0.1
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
+  cloud_firestore: ^5.1.0
+  firebase_ui_auth: ^1.15.0
+  provider: ^6.1.2
+  google_sign_in: ^6.2.1
+  firebase_ui_oauth_google: ^1.3.3
+  firebase_storage: ^12.1.1
+  uuid: ^4.4.2
+  path_provider: ^2.1.3
+  sign_in_with_apple: ^6.1.1
+  intl: ^0.19.0
+  image_picker_web: ^4.0.0
+
+  universal_html: ^2.2.4
+  chat_gpt_sdk:
+    git:
+      url: https://github.com/daniel360kim/chat_gpt_sdk.git
+      ref: main
+  flutter_math_fork: ^0.7.2
+  flutter_dotenv: ^5.1.0
+  flutter_markdown: ^0.7.3
+  flutter_tex: ^4.0.6
+
+
 
 
   
@@ -33,6 +61,22 @@ flutter:
       fonts:
         - asset: assets/fonts/Inter/Inter-Regular.ttf
         - asset: assets/fonts/Inter/Inter-Bold.ttf
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto/Roboto-Bold.ttf
+    - family: SegoeUI
+      fonts:
+        - asset: assets/fonts/SegoeUI/SegoeUI-Regular.ttf
+        - asset: assets/fonts/SegoeUI/SegoeUI-Bold.ttf
+
   uses-material-design: true
   assets:
-    - assets/images/jazzcafe.jpeg
+    - assets/audio/asian/
+    - assets/audio/jazz/
+    - assets/audio/synthwave/
+    - assets/audio/index/
+    - assets/background/
+    - assets/scenes/
+    - assets/brand/
+    - .env
