--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_markdown: ^0.7.3
   flutter_tex: ^4.0.6
+  lottie: ^3.1.2
 
 
 
@@ -79,4 +80,5 @@ flutter:
     - assets/background/
     - assets/scenes/
     - assets/brand/
+    - assets/animations/
     - .env
