--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^4.8.1
-  http: ^1.2.1
   just_audio: ^0.9.36
   audio_session: ^0.1.18
   rxdart: ^0.27.7
@@ -19,7 +18,6 @@ dependencies:
   cached_network_image: ^3.3.1
   url_launcher: ^6.3.0
   flutter_audio_waveforms: ^1.2.1+8
-  file_picker: ^8.0.6
   card_swiper: ^3.0.1
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
@@ -30,8 +28,6 @@ dependencies:
   firebase_ui_oauth_google: ^1.3.3
   firebase_storage: ^12.1.1
   uuid: ^4.4.2
-  path_provider: ^2.1.3
-  sign_in_with_apple: ^6.1.1
   intl: ^0.19.0
   image_picker_web: ^4.0.0
 
@@ -43,10 +39,10 @@ dependencies:
   flutter_math_fork: ^0.7.2
   flutter_dotenv: ^5.1.0
   flutter_markdown: ^0.7.3
-  flutter_tex: ^4.0.6
   lottie: ^3.1.2
-  image: ^4.2.0
   dio: ^5.5.0+1
+  universal_io: ^2.2.2
+  logger: ^2.4.0
 
 
 
