--- a/firebase.json
+++ b/firebase.json
@@ -37,24 +37,9 @@
   "emulators": {
     "singleProjectMode": true
   },
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
-    }
-  ],
+  
   "hosting": {
-    "source": "lib/main.dart",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
