added firebase dependency

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "firebase": "^10.9.0"
+  },
   "author": "",
   "license": "ISC"
 }
