--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,12 +7,12 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: subosito/flutter-action@v2.2.1
         with:
-          node-version: '20' # specify your desired version
-      - run: npm -v # Check npm version
-      - run: npm ci && npm run generate
+          channel: beta
+          cache: true
+      - uses: actions/checkout@v2
+      - run: flutter build web --no-tree-shake-icons
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
