--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Decode base64 secrets
         run: echo $SECRETS_FILE_CONTENTS | base64 -d > lib/secrets.dart
         env:
-          SECRETS_FILE_CONTENTS: ${{ secrets.SECRETS_FILE_CONTENTS }}
+          SECRETS_FILE_CONTENTS: ${{ secrets.SECRETS_FILE_CONTENT }}
       - run: flutter build web --no-tree-shake-icons
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
