--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 
   
 
+  http: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -72,7 +73,6 @@ flutter:
 
   uses-material-design: true
   assets:
-    - assets/background/
     - assets/scenes/
     - assets/brand/
     - assets/animations/
