updated CORS policy

--- a/firebase.json
+++ b/firebase.json
@@ -39,6 +39,18 @@
   },
   
   "hosting": {
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
+
+    ],
     "public": "build/web",
     "ignore": [
       "firebase.json",
