--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,6 @@ flutter:
 
   uses-material-design: true
   assets:
-    - assets/scenes/
+    - assets/icons/
     - assets/brand/
     - assets/animations/
