--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -36,7 +36,7 @@ jobs:
         
       
       - name: Build Flutter Web App
-        run: flutter build web --no-tree-shake-icons
+        run: flutter build web --no-tree-shake-icons --web-renderer html --release
       
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
