--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   marquee_text: ^2.5.0+1
   text_marquee: ^0.0.2
   google_fonts: ^6.2.1
+  get: ^4.6.6
+  share_plus: ^10.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
