--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  flutter_web_plugins:
+    sdk: flutter
   flutter:
     sdk: flutter
   json_annotation: ^4.8.1
@@ -59,6 +61,8 @@ dependencies:
   google_fonts: ^6.2.1
   get: ^4.6.6
   share_plus: ^10.0.0
+  go_router: ^14.2.7
+  url_strategy: ^0.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
