--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   share_plus: ^10.0.0
   go_router: ^14.2.7
   url_strategy: ^0.3.0
+  skeletonizer: ^1.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
