--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   url_strategy: ^0.3.0
   skeletonizer: ^1.4.2
   flutter_secure_storage: ^9.2.2
+  sentry_flutter: ^8.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
