--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   skeletonizer: ^1.4.2
   flutter_secure_storage: ^9.2.2
   sentry_flutter: ^8.9.0
+  firebase_analytics: ^11.3.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
