--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,18 +9,19 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
       
-      - uses: subosito/flutter-action@v2.2.1
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2.2.1
         with:
+          flutter-version: '3.27.0' # Specify Flutter version
+          
           channel: beta
           cache: true
     
       - name: Disable web caching
         run: bash ./build-web.sh
-      
-      - name: Checkout code
-        uses: actions/checkout@v2
       
       - name: Decode base64 secrets
         run: |
@@ -30,17 +31,18 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCLOUD_SERVICE_ACCOUNT_KEY }}
+      
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
         
       - name: Set CORS Configuration
         run: gsutil cors set ./cors.json ${{ secrets.BUCKET_NAME }}
         
-      
       - name: Build Flutter Web App
-        run: flutter build web --no-tree-shake-icons --web-renderer html --release
+        run: flutter build web --no-tree-shake-icons --web-renderer html --release # Uses the specified Flutter version
       
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_FLOURISH_WEB_FA343 }}
