--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   sentry_flutter: ^8.9.0
   firebase_analytics: ^11.3.3
+  animated_reorderable_list: ^1.1.3
+  flutter_datetime_picker_plus: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
