--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flourish_web
-description: "A new Flutter project."
+name: studybeats
+description: "Interactive productivity suite"
 publish_to: 'none'
 version: 0.1.0
 
