--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Flouria",
-    "short_name": "Flouria",
+    "name": "Studybeats",
+    "short_name": "Studybeats",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
