updated public directory

--- a/firebase.json
+++ b/firebase.json
@@ -38,7 +38,7 @@
     "singleProjectMode": true
   },
   "hosting": {
-    "public": "public",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
