--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   firebase_analytics: ^11.3.3
   animated_reorderable_list: ^1.1.3
   flutter_datetime_picker_plus: ^2.2.0
+  animated_text_kit: ^4.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
