--- a/firebase.json
+++ b/firebase.json
@@ -38,6 +38,7 @@
     "singleProjectMode": true
   },
   "hosting": {
+    "target": "app",
     "public": "build/web",
     "ignore": [
       "firebase.json",
