--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   animated_reorderable_list: ^1.1.3
   flutter_datetime_picker_plus: ^2.2.0
   animated_text_kit: ^4.2.2
+  flutter_native_splash: ^2.4.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
