--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   flutter_datetime_picker_plus: ^2.2.0
   animated_text_kit: ^4.2.2
   flutter_native_splash: ^2.4.4
+  flutter_quill: ^10.8.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
