--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -39,7 +39,7 @@ jobs:
         run: gsutil cors set ./cors.json ${{ secrets.BUCKET_NAME }}
         
       - name: Build Flutter Web App
-        run: flutter build web --no-tree-shake-icons --web-renderer html --release # Uses the specified Flutter version
+        run: flutter build web --no-tree-shake-icons --release # Uses the specified Flutter version
       
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0.9.0
