--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       
       - name: Set up Flutter
         uses: subosito/flutter-action@v2.8.0
         with:
           flutter-version: '3.29.0' # Specify Flutter version
           
-          channel: beta
+          channel: master
           cache: true
     
       - name: Disable web caching
