--- a/firebase.json
+++ b/firebase.json
@@ -40,6 +40,9 @@
   "hosting": {
     "target": "app",
     "public": "build/web",
+    "headers": [
+      { "source":"/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}] }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
