--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_native_splash: ^2.4.4
   flutter_quill: ^11.0.0
+  dart_openai: ^5.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
