--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,6 @@ dependencies:
   image_picker_web: ^4.0.0
 
   universal_html: ^2.2.4
-  chat_gpt_sdk:
-    git:
-      url: https://github.com/daniel360kim/chat_gpt_sdk.git
-      ref: main
   flutter_math_fork:
     git:
       url: https://github.com/daniel360kim/flutter_math_fork
@@ -73,7 +69,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_native_splash: ^2.4.4
   flutter_quill: ^11.0.0
-  dart_openai: ^5.1.0
+  openai_dart: ^0.4.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
