--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   flutter_quill: ^11.0.0
   openai_dart: ^0.4.5
+  tiktoken: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
