--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   flutter_quill: ^11.0.0
   openai_dart: ^0.4.5
   tiktoken: ^1.0.3
+  cloud_functions: ^5.3.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
