--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   openai_dart: ^0.4.5
   tiktoken: ^1.0.3
   cloud_functions: ^5.3.4
+  package_info_plus: ^8.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
