--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.0
   json_annotation: ^4.8.1
   just_audio: ^0.9.40
   audio_session: ^0.1.18
