implemented session name and todo inputs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ dependencies:
   cloud_functions: ^5.3.4
   package_info_plus: ^8.3.0
   flutter_localization: any
+  fl_chart: ^0.70.2
+  flutter_localizations:
+    sdk: flutter
 dev_dependencies:
   flutter_test:
     sdk: flutter
