--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "firebase": "^10.9.0"
+    "firebase": "^10.9.0",
+    "firebase-admin": "^13.2.0",
+    "firebase-functions": "^6.3.2"
   },
   "author": "",
   "license": "ISC"
