--- a/firebase.json
+++ b/firebase.json
@@ -43,17 +43,17 @@
       "port": 5001
     },
     "firestore": {
-      "port": 8081
+      "port": 8082
     },
     "hosting": {
-      "port": 5000
+      "port": 5003
     },
     "storage": {
       "port": 9199
     },
     "ui": {
       "enabled": true,
-      "port": 1000
+      "port": 5002
     }
   },
   "hosting": {
@@ -103,8 +103,11 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
+        
       ]
     }
-  ]
+  ],
+  "storage": {
+    "rules": "storage.rules"
+  }
 }
