--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,13 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
