implemented playlist and track api for spotify

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
 
   
 
-  http: any
+  http: ^1.4.0
   marquee_text: ^2.5.0+1
   text_marquee: ^0.0.2
   google_fonts: ^6.2.1
@@ -78,6 +78,9 @@ dependencies:
   percent_indicator: ^4.2.5
   test: ^1.25.15
   shared_preferences: ^2.5.3
+  crypto: ^3.0.6
+  web: ^1.1.1
+  flutter_svg: ^2.1.0
 
 
 
