--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,9 @@ dependencies:
   crypto: ^3.0.6
   web: ^1.1.1
   flutter_svg: ^2.1.0
+  spotify_sdk: ^3.0.2
+  flutter_dotenv: ^5.2.1
+  js: ^0.6.7
 
 
 
