updated ai chat ui

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "type": "dart",
             "args": [
                 "--web-browser-flag=--disable-web-security",
-                "--web-hostname=localhost",
+                "--web-hostname=127.0.0.1",
                 "--web-port",
                 "8080",
        
