--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/secret-manager": "^6.0.1",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "axios": "^1.10.0",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2"
   },
