--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,14 @@ dependencies:
 
 
   equatable: any
+  one_clock: ^2.0.1
+  reorderables: ^0.6.0
+  weather: ^3.2.1
+  geolocator: ^14.0.1
+  permission_handler: ^12.0.0+1
+  geolocator_web: ^4.1.3
+  fl_location: ^5.0.0
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
