--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,8 @@ dependencies:
   firebase_ui_oauth_google: ^1.3.3
   firebase_storage: ^12.1.1
   uuid: ^4.4.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   image_picker_web: ^4.0.0
-
   universal_html: ^2.2.4
   flutter_markdown: ^0.7.3
   lottie: ^3.1.2
@@ -44,12 +43,6 @@ dependencies:
   logger: ^2.4.0
   flutter_stripe: ^11.0.0
   shimmer: ^3.0.0
-
-
-
-
-  
-
   http: ^1.4.0
   marquee_text: ^2.5.0+1
   text_marquee: ^0.0.2
@@ -88,13 +81,13 @@ dependencies:
 
 
   equatable: any
-  one_clock: ^2.0.1
   reorderables: ^0.6.0
   weather: ^3.2.1
   geolocator: ^14.0.1
   permission_handler: ^12.0.0+1
   geolocator_web: ^4.1.3
   fl_location: ^5.0.0
+  flutter_analog_clock: ^1.0.3
  
 dev_dependencies:
   flutter_test:
